syntax = "proto3";
package prismfinance.prismcore.icq;

option go_package = "github.com/prism-finance/prism-core/x/icq/types";

message EventInterchainQueryRequested {
  string query_id = 1;
  string chain_id = 2;
  string connection_id = 3;
  string type = 4;
  int64 height = 5;
  string request = 6;
}

message EventInterchainQueryResponded {
  string query_id = 1;
}